--- a/data_analysis_using_python.ipynb
+++ b/data_analysis_using_python.ipynb
@@ -168,6 +168,164 @@
     "    else:\n",
     "        print(\"{} is not divisibule by 5\".format(a_number))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## while loop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Factorial of 100 using while loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The falctorial of 100 is 93326215443944152681699238856266700490715968264381621468592963895217599993229915608941463976156518286253697920827223758251185210916864000000000000000000000000\n",
+      "CPU times: total: 15.6 ms\n",
+      "Wall time: 6.51 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "result = 1\n",
+    "i = 1\n",
+    "\n",
+    "while i <= 100:\n",
+    "    result = result * i\n",
+    "    i = i + 1\n",
+    "print(\"The falctorial of 100 is {}\".format(result))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pattern using while loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n",
+      "******\n",
+      "*******\n",
+      "********\n",
+      "*********\n",
+      "**********\n",
+      "***********\n",
+      "**********\n",
+      "*********\n",
+      "********\n",
+      "*******\n",
+      "******\n",
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "line = \"*\"\n",
+    "max_length = 10\n",
+    "\n",
+    "while len(line) <= max_length:\n",
+    "    print(line)\n",
+    "    line += \"*\"\n",
+    "\n",
+    "while len(line) > 0:\n",
+    "    print(line)\n",
+    "    line = line[:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         *\n",
+      "        **\n",
+      "       ***\n",
+      "      ****\n",
+      "     *****\n",
+      "    ******\n",
+      "   *******\n",
+      "  ********\n",
+      " *********\n",
+      "**********\n",
+      " *********\n",
+      "  ********\n",
+      "   *******\n",
+      "    ******\n",
+      "     *****\n",
+      "      ****\n",
+      "       ***\n",
+      "        **\n",
+      "         *\n",
+      "          \n"
+     ]
+    }
+   ],
+   "source": [
+    "line = \"*\"\n",
+    "max_length = 10\n",
+    "space = \" \"\n",
+    "i = 1\n",
+    "\n",
+    "while len(line) <= max_length:\n",
+    "    while i < max_length:\n",
+    "        print(space, end=\"\")\n",
+    "        i += 1\n",
+    "    print(line)\n",
+    "    line += \"*\"\n",
+    "    i = len(line)\n",
+    "\n",
+    "j = 1\n",
+    "line = line[:-1]\n",
+    "while len(line) > 0:\n",
+    "    while j > 0:\n",
+    "        print(space, end=\"\")\n",
+    "        j -= 1\n",
+    "    line = line[:-1]\n",
+    "    print(line)\n",
+    "    j = (max_length+1) - len(line)\n"
+   ]
   }
  ],
  "metadata": {
