--- a/data_analysis_using_python.ipynb
+++ b/data_analysis_using_python.ipynb
@@ -326,6 +326,431 @@
     "    print(line)\n",
     "    j = (max_length+1) - len(line)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## for loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "monday\n",
+      "tuesday\n",
+      "wednesday\n",
+      "Thursday\n",
+      "frinday\n",
+      "satuarday\n"
+     ]
+    }
+   ],
+   "source": [
+    "days = [\"monday\", \"tuesday\", \"wednesday\", \"Thursday\", \"frinday\", \"satuarday\"]\n",
+    "\n",
+    "for day in days:\n",
+    "    print(day)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looping over a dictionary\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key: name  ,  value: Varun Singh\n",
+      "Key: sex  ,  value: Male\n",
+      "Key: age  ,  value: 32\n",
+      "Key: married  ,  value: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "person = {\n",
+    "    'name': \"Varun Singh\",\n",
+    "    'sex' : 'Male',\n",
+    "    'age' : 32,\n",
+    "    'married' : False\n",
+    "}\n",
+    "\n",
+    "for key in person:\n",
+    "    print('Key:', key,  \" , \", \"value:\", person[key])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Varun Singh\n",
+      "Male\n",
+      "32\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "for value in person.values():\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('name', 'Varun Singh')\n",
+      "('sex', 'Male')\n",
+      "('age', 32)\n",
+      "('married', False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key_value_pair in person.items():\n",
+    "    print(key_value_pair)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Functions in python\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hollo there!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def say_hello():\n",
+    "    print('Hollo there!')\n",
+    "\n",
+    "\n",
+    "say_hello()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Function arguments\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello varun\n"
+     ]
+    }
+   ],
+   "source": [
+    "def say_hello(name):\n",
+    "    print(\"Hello {}\".format(name))\n",
+    "\n",
+    "say_hello(\"varun\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def filter_even(number_list):\n",
+    "    result_list = []\n",
+    "    for number in number_list:\n",
+    "        if number % 2 == 0:\n",
+    "            result_list.append(number)\n",
+    "    return result_list\n",
+    "\n",
+    "even_list = filter_even([1,2,3,4,5,6,7,8,9])\n",
+    "even_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Radha house buying problem: solved\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def loan_emi(amount, duration, rate, down_payment = 0):\n",
+    "    \"\"\"Calculates the Equal Monthly Installment (EMI) for a loan\"\"\"\n",
+    "    loan_amount = amount - down_payment\n",
+    "    try: \n",
+    "        emi = loan_amount * rate * ((1+rate)**duration) / (((1+rate)**duration)-1)\n",
+    "    except ZeroDivisionError:\n",
+    "        emi = loan_amount / duration\n",
+    "    return math.ceil(emi)\n",
+    "\n",
+    "emi1 = loan_emi(\n",
+    "    amount=1260000, \n",
+    "    duration=8*12, \n",
+    "    rate=0.1/12, \n",
+    "    down_payment=3e5\n",
+    ")\n",
+    "emi2 = loan_emi(\n",
+    "    amount=1260000, \n",
+    "    duration=10*12, \n",
+    "    rate=0.08/12\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14568"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emi1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15288"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emi2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Option 1 has the lower EMI: $14568'"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def check_lower_emi(emi1, emi2):\n",
+    "    if emi1 < emi2:\n",
+    "        return \"Option 1 has the lower EMI: ${}\".format(emi1)\n",
+    "    else:\n",
+    "        return \"Option 2 has the lower EMI: ${}\".format(emi2)   \n",
+    "\n",
+    "check_lower_emi(emi1=emi1, emi2=emi2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Shoun house and car buying problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10230"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cost_of_the_house = 800000\n",
+    "home_loan_duration = 6 * 12\n",
+    "home_loan_rate = 0.07 / 12\n",
+    "home_down_payment = .25 * 800000\n",
+    "\n",
+    "emi_house = loan_emi(amount=cost_of_the_house,\n",
+    "                     duration=home_loan_duration,\n",
+    "                     rate=home_loan_rate,\n",
+    "                     down_payment=home_down_payment) \n",
+    "emi_house"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5331"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cost_of_car = 60000\n",
+    "car_loan_duration = 1*12\n",
+    "car_loan_rate = .12/12\n",
+    "\n",
+    "emi_car = loan_emi(amount=cost_of_car, \n",
+    "                   duration=car_loan_duration, \n",
+    "                   rate=car_loan_rate)\n",
+    "\n",
+    "emi_car"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shaun's monthly EMI is: $15561\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_emi = emi_house + emi_car\n",
+    "print(\"Shaun's monthly EMI is: ${}\".format(total_emi))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With Interest and without Interest problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total interest paid is $51960\n"
+     ]
+    }
+   ],
+   "source": [
+    "emi_with_interest = loan_emi(amount=100000, duration=10*12, rate= 0.09/12)\n",
+    "emi_without_interest = loan_emi(amount=100000, duration=10*12, rate= 0./12)\n",
+    "\n",
+    "total_interest = (emi_with_interest - emi_without_interest) * 10*12\n",
+    "print(\"The total interest paid is ${}\".format(total_interest))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function loan_emi in module __main__:\n",
+      "\n",
+      "loan_emi(amount, duration, rate, down_payment=0)\n",
+      "    Calculates the Equal Monthly Installment (EMI) for a loan\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(loan_emi)"
+   ]
   }
  ],
  "metadata": {
