--- a/data_analysis_using_python.ipynb
+++ b/data_analysis_using_python.ipynb
@@ -751,6 +751,390 @@
    "source": [
     "help(loan_emi)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Numerical computing with Numpy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apple and region problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights = [0.3, 0.2, 0.5]\n",
+    "kanto = [73, 67, 43]\n",
+    "johto = [91, 88, 64]\n",
+    "hoenn = [87, 134, 43]\n",
+    "sinnoh = [102, 43, 37]\n",
+    "unova = [69, 96, 70]\n",
+    "\n",
+    "def crop_yield(region, weights):\n",
+    "    result = 0\n",
+    "    for x, w in zip(region, weights):\n",
+    "        result += x * w\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(crop_yield(kanto, weights))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "76.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(crop_yield(johto, weights))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(crop_yield(hoenn, weights))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "57.699999999999996\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(crop_yield(sinnoh, weights))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(crop_yield(unova, weights))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Going from Python lists to Numpy Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting numpy"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  WARNING: Failed to write executable - trying to use .deleteme logic\n",
+      "ERROR: Could not install packages due to an OSError: [WinError 2] The system cannot find the file specified: 'C:\\\\Python312\\\\Scripts\\\\f2py.exe' -> 'C:\\\\Python312\\\\Scripts\\\\f2py.exe.deleteme'\n",
+      "\n",
+      "\n",
+      "[notice] A new release of pip is available: 23.2.1 -> 24.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  Obtaining dependency information for numpy from https://files.pythonhosted.org/packages/b7/98/5640a09daa3abf0caeaefa6e7bf0d10c0aa28a77c84e507d6a716e0e23df/numpy-2.1.1-cp312-cp312-win_amd64.whl.metadata\n",
+      "  Downloading numpy-2.1.1-cp312-cp312-win_amd64.whl.metadata (59 kB)\n",
+      "     ---------------------------------------- 0.0/59.7 kB ? eta -:--:--\n",
+      "     ------------- ------------------------ 20.5/59.7 kB 682.7 kB/s eta 0:00:01\n",
+      "     -------------------------------------- 59.7/59.7 kB 634.7 kB/s eta 0:00:00\n",
+      "Downloading numpy-2.1.1-cp312-cp312-win_amd64.whl (12.6 MB)\n",
+      "   ---------------------------------------- 0.0/12.6 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.1/12.6 MB 2.6 MB/s eta 0:00:05\n",
+      "    --------------------------------------- 0.2/12.6 MB 3.4 MB/s eta 0:00:04\n",
+      "   - -------------------------------------- 0.3/12.6 MB 2.7 MB/s eta 0:00:05\n",
+      "   - -------------------------------------- 0.4/12.6 MB 2.4 MB/s eta 0:00:05\n",
+      "   - -------------------------------------- 0.5/12.6 MB 2.4 MB/s eta 0:00:05\n",
+      "   -- ------------------------------------- 0.6/12.6 MB 2.4 MB/s eta 0:00:05\n",
+      "   -- ------------------------------------- 0.7/12.6 MB 2.3 MB/s eta 0:00:06\n",
+      "   -- ------------------------------------- 0.9/12.6 MB 2.4 MB/s eta 0:00:05\n",
+      "   --- ------------------------------------ 1.0/12.6 MB 2.4 MB/s eta 0:00:05\n",
+      "   --- ------------------------------------ 1.1/12.6 MB 2.5 MB/s eta 0:00:05\n",
+      "   --- ------------------------------------ 1.2/12.6 MB 2.4 MB/s eta 0:00:05\n",
+      "   ---- ----------------------------------- 1.4/12.6 MB 2.6 MB/s eta 0:00:05\n",
+      "   ---- ----------------------------------- 1.5/12.6 MB 2.6 MB/s eta 0:00:05\n",
+      "   ----- ---------------------------------- 1.6/12.6 MB 2.6 MB/s eta 0:00:05\n",
+      "   ----- ---------------------------------- 1.8/12.6 MB 2.6 MB/s eta 0:00:05\n",
+      "   ------ --------------------------------- 1.9/12.6 MB 2.6 MB/s eta 0:00:05\n",
+      "   ------ --------------------------------- 2.1/12.6 MB 2.6 MB/s eta 0:00:05\n",
+      "   ------ --------------------------------- 2.1/12.6 MB 2.6 MB/s eta 0:00:04\n",
+      "   ------ --------------------------------- 2.1/12.6 MB 2.6 MB/s eta 0:00:04\n",
+      "   ------ --------------------------------- 2.1/12.6 MB 2.6 MB/s eta 0:00:04\n",
+      "   ------ --------------------------------- 2.2/12.6 MB 2.3 MB/s eta 0:00:05\n",
+      "   ------ --------------------------------- 2.2/12.6 MB 2.3 MB/s eta 0:00:05\n",
+      "   ------ --------------------------------- 2.2/12.6 MB 2.3 MB/s eta 0:00:05\n",
+      "   ------ --------------------------------- 2.2/12.6 MB 2.3 MB/s eta 0:00:05\n",
+      "   ------ --------------------------------- 2.2/12.6 MB 2.3 MB/s eta 0:00:05\n",
+      "   ------ --------------------------------- 2.2/12.6 MB 1.8 MB/s eta 0:00:06\n",
+      "   ------- -------------------------------- 2.2/12.6 MB 1.8 MB/s eta 0:00:06\n",
+      "   ------- -------------------------------- 2.4/12.6 MB 1.9 MB/s eta 0:00:06\n",
+      "   ------- -------------------------------- 2.5/12.6 MB 1.9 MB/s eta 0:00:06\n",
+      "   -------- ------------------------------- 2.7/12.6 MB 1.9 MB/s eta 0:00:06\n",
+      "   -------- ------------------------------- 2.7/12.6 MB 1.9 MB/s eta 0:00:06\n",
+      "   -------- ------------------------------- 2.8/12.6 MB 1.9 MB/s eta 0:00:06\n",
+      "   --------- ------------------------------ 2.9/12.6 MB 1.9 MB/s eta 0:00:06\n",
+      "   --------- ------------------------------ 3.0/12.6 MB 1.9 MB/s eta 0:00:06\n",
+      "   --------- ------------------------------ 3.1/12.6 MB 1.9 MB/s eta 0:00:05\n",
+      "   ---------- ----------------------------- 3.2/12.6 MB 1.9 MB/s eta 0:00:05\n",
+      "   ---------- ----------------------------- 3.3/12.6 MB 2.0 MB/s eta 0:00:05\n",
+      "   ----------- ---------------------------- 3.5/12.6 MB 2.0 MB/s eta 0:00:05\n",
+      "   ----------- ---------------------------- 3.6/12.6 MB 2.0 MB/s eta 0:00:05\n",
+      "   ----------- ---------------------------- 3.7/12.6 MB 2.0 MB/s eta 0:00:05\n",
+      "   ------------ --------------------------- 3.8/12.6 MB 2.0 MB/s eta 0:00:05\n",
+      "   ------------ --------------------------- 4.0/12.6 MB 2.0 MB/s eta 0:00:05\n",
+      "   ------------ --------------------------- 4.1/12.6 MB 2.0 MB/s eta 0:00:05\n",
+      "   ------------- -------------------------- 4.2/12.6 MB 2.1 MB/s eta 0:00:05\n",
+      "   ------------- -------------------------- 4.3/12.6 MB 2.1 MB/s eta 0:00:04\n",
+      "   -------------- ------------------------- 4.4/12.6 MB 2.1 MB/s eta 0:00:04\n",
+      "   -------------- ------------------------- 4.6/12.6 MB 2.1 MB/s eta 0:00:04\n",
+      "   -------------- ------------------------- 4.7/12.6 MB 2.1 MB/s eta 0:00:04\n",
+      "   --------------- ------------------------ 4.8/12.6 MB 2.1 MB/s eta 0:00:04\n",
+      "   --------------- ------------------------ 4.9/12.6 MB 2.1 MB/s eta 0:00:04\n",
+      "   --------------- ------------------------ 5.0/12.6 MB 2.1 MB/s eta 0:00:04\n",
+      "   ---------------- ----------------------- 5.1/12.6 MB 2.1 MB/s eta 0:00:04\n",
+      "   ---------------- ----------------------- 5.2/12.6 MB 2.1 MB/s eta 0:00:04\n",
+      "   ----------------- ---------------------- 5.4/12.6 MB 2.2 MB/s eta 0:00:04\n",
+      "   ----------------- ---------------------- 5.5/12.6 MB 2.2 MB/s eta 0:00:04\n",
+      "   ----------------- ---------------------- 5.6/12.6 MB 2.2 MB/s eta 0:00:04\n",
+      "   ------------------ --------------------- 5.7/12.6 MB 2.2 MB/s eta 0:00:04\n",
+      "   ------------------ --------------------- 5.8/12.6 MB 2.2 MB/s eta 0:00:04\n",
+      "   ------------------ --------------------- 5.9/12.6 MB 2.2 MB/s eta 0:00:04\n",
+      "   ------------------- -------------------- 6.1/12.6 MB 2.2 MB/s eta 0:00:03\n",
+      "   ------------------- -------------------- 6.2/12.6 MB 2.2 MB/s eta 0:00:03\n",
+      "   -------------------- ------------------- 6.3/12.6 MB 2.2 MB/s eta 0:00:03\n",
+      "   -------------------- ------------------- 6.5/12.6 MB 2.2 MB/s eta 0:00:03\n",
+      "   -------------------- ------------------- 6.6/12.6 MB 2.2 MB/s eta 0:00:03\n",
+      "   --------------------- ------------------ 6.7/12.6 MB 2.2 MB/s eta 0:00:03\n",
+      "   --------------------- ------------------ 6.8/12.6 MB 2.2 MB/s eta 0:00:03\n",
+      "   ---------------------- ----------------- 6.9/12.6 MB 2.2 MB/s eta 0:00:03\n",
+      "   ---------------------- ----------------- 7.0/12.6 MB 2.2 MB/s eta 0:00:03\n",
+      "   ---------------------- ----------------- 7.1/12.6 MB 2.2 MB/s eta 0:00:03\n",
+      "   ----------------------- ---------------- 7.3/12.6 MB 2.3 MB/s eta 0:00:03\n",
+      "   ----------------------- ---------------- 7.4/12.6 MB 2.2 MB/s eta 0:00:03\n",
+      "   ----------------------- ---------------- 7.5/12.6 MB 2.3 MB/s eta 0:00:03\n",
+      "   ------------------------ --------------- 7.7/12.6 MB 2.3 MB/s eta 0:00:03\n",
+      "   ------------------------ --------------- 7.8/12.6 MB 2.3 MB/s eta 0:00:03\n",
+      "   ------------------------ --------------- 7.9/12.6 MB 2.3 MB/s eta 0:00:03\n",
+      "   ------------------------- -------------- 8.0/12.6 MB 2.3 MB/s eta 0:00:03\n",
+      "   ------------------------- -------------- 8.1/12.6 MB 2.3 MB/s eta 0:00:02\n",
+      "   -------------------------- ------------- 8.2/12.6 MB 2.3 MB/s eta 0:00:02\n",
+      "   -------------------------- ------------- 8.4/12.6 MB 2.3 MB/s eta 0:00:02\n",
+      "   -------------------------- ------------- 8.5/12.6 MB 2.3 MB/s eta 0:00:02\n",
+      "   --------------------------- ------------ 8.6/12.6 MB 2.3 MB/s eta 0:00:02\n",
+      "   --------------------------- ------------ 8.7/12.6 MB 2.3 MB/s eta 0:00:02\n",
+      "   ---------------------------- ----------- 8.8/12.6 MB 2.3 MB/s eta 0:00:02\n",
+      "   ---------------------------- ----------- 8.9/12.6 MB 2.3 MB/s eta 0:00:02\n",
+      "   ---------------------------- ----------- 9.1/12.6 MB 2.3 MB/s eta 0:00:02\n",
+      "   ----------------------------- ---------- 9.2/12.6 MB 2.3 MB/s eta 0:00:02\n",
+      "   ----------------------------- ---------- 9.3/12.6 MB 2.3 MB/s eta 0:00:02\n",
+      "   ------------------------------ --------- 9.5/12.6 MB 2.3 MB/s eta 0:00:02\n",
+      "   ------------------------------ --------- 9.6/12.6 MB 2.3 MB/s eta 0:00:02\n",
+      "   ------------------------------ --------- 9.7/12.6 MB 2.3 MB/s eta 0:00:02\n",
+      "   ------------------------------- -------- 9.8/12.6 MB 2.3 MB/s eta 0:00:02\n",
+      "   ------------------------------- -------- 9.9/12.6 MB 2.3 MB/s eta 0:00:02\n",
+      "   -------------------------------- ------- 10.1/12.6 MB 2.3 MB/s eta 0:00:02\n",
+      "   -------------------------------- ------- 10.2/12.6 MB 2.3 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 10.3/12.6 MB 2.3 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 10.5/12.6 MB 2.3 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 10.6/12.6 MB 2.3 MB/s eta 0:00:01\n",
+      "   ---------------------------------- ----- 10.7/12.6 MB 2.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------- ----- 10.9/12.6 MB 2.4 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 11.0/12.6 MB 2.4 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 11.2/12.6 MB 2.4 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 11.3/12.6 MB 2.4 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 11.4/12.6 MB 2.4 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 11.6/12.6 MB 2.4 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 11.7/12.6 MB 2.4 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 11.8/12.6 MB 2.4 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 12.0/12.6 MB 2.4 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 12.0/12.6 MB 2.4 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 12.2/12.6 MB 2.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  12.3/12.6 MB 2.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  12.4/12.6 MB 2.6 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  12.6/12.6 MB 2.6 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  12.6/12.6 MB 2.6 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  12.6/12.6 MB 2.6 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 12.6/12.6 MB 2.5 MB/s eta 0:00:00\n",
+      "Installing collected packages: numpy\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([73, 67, 43])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "kanto  = np.array([73, 67, 43])\n",
+    "kanto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights = np.array([0.3, 0.2, 0.5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.3, 0.2, 0.5])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(56.8)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.dot(kanto, weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(56.8)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(kanto * weights).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
